--- a/course-materials/week7.qmd
+++ b/course-materials/week7.qmd
@@ -62,8 +62,8 @@ We'll learn how to use [Font Awesome](https://fontawesome.com/){target="_blank"}
 
 | {{< fa person-chalkboard title="A person motioning at a chalkboard" >}} Lecture slides   | {{< fa file-code title="A code file" >}} Code-along template | {{< fa key title="A key" >}} Code-along key |
 |------------------------------------------------------------------------------------------|--------------------------------------------------------------|---------------------------------------------------|
-| [Lecture 7.1: typography](lecture-slides/SLIDES-typography.qmd){target="_blank"}  | [7.1 template](https://github.com/EDS-240-Data-Viz/code-along-templates/blob/main/TEMPLATE-typography.qmd){target="_blank"} | [7.1 key](keys/KEY-typography.qmd){target="_blank"} |
-| [Lecture 7.2: annotations](lecture-slides/SLIDES-annotations.qmd){target="_blank"} | [7.2 template](https://github.com/EDS-240-Data-Viz/code-along-templates/blob/main/TEMPLATE-annotations.qmd){target="_blank"} | [6.2 key](keys/KEY-annotations.qmd){target="_blank"} |
+| [Lecture 7.1: typography](lecture-slides/SLIDES-typography.qmd){target="_blank"}  | [7.1 & 7.2 template](https://github.com/EDS-240-Data-Viz/code-along-templates/blob/main/TEMPLATE-typography.qmd){target="_blank"} | [7.1 & 7.2 key](keys/KEY-typography-annotations.qmd){target="_blank"} |
+| [Lecture 7.2: annotations](lecture-slides/SLIDES-annotations.qmd){target="_blank"} | we'll use the same template, above | we'll use the same key, above |
 : {.hover .bordered tbl-colwidths="[50,25,25]"} 
 
 ## {{< fa clipboard-list title="a clipboard with a To Do list" >}} Pre-lab Prep {#pre-lab-prep} 
